--- a/VSIXControls.csproj
+++ b/VSIXControls.csproj
@@ -96,6 +96,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Led16x16.bmp" />
+    <Content Include="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Switch.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
